<hr>

<h3>News</h3>

<ul style="line-height:1.4em">
  <font size="2">
  <li>
	<font color=red>*new*</font>
	[07/2024]
	One paper (Video Localization) is accepted to <a href="https://cikm2024.org/">CIKM 2024</a>.
  </li>
  <li>
	<font color=red>*new*</font>
	[06/2024]
	One paper (Speaker Identification) is accepted to <a href="https://interspeech2024.org/">INTERSPEECH 2024</a>.
  </li>
  <li>
	<font color=red>*new*</font>
	[05/2024]
	One paper (Assessing News Thumbnail Representativeness) is accepted to <a href="https://2024.aclweb.org/">ACL 2024 Findings</a>.
  </li>
  <li>
	[03/2024]
	One paper (Multilingual Representation for Semantic Retrieval) is accepted to <a href="https://sigir-2024.github.io/">SIGIR 2024</a>.
  </li>
  <li>
	[03/2024]
	One paper (Explainable Image Classification) is accepted to <a href="https://2024.naacl.org/">NAACL 2024 Findings</a>.
  </li>
  <li>
	[02/2024]
	One paper (Video Summary) is accepted to <a href="https://cvpr.thecvf.com/">CVPR 2024</a>.
  </li>
  <li>
	[01/2024]
	One paper (Textual Representation) is accepted to <a href="https://2024.eacl.org/">EACL 2024 Findings</a>.
  </li>
</ul>

<a href="{{ site.baseurl }}/news.html">history</a>