@@ -1,13 +1,13 @@
 ﻿year,title,authors,conference,conference_url,comment,meta_1,meta_1-url,meta_2,meta_2-url,meta_3,meta_3-url,meta_4,meta_4-url
 arXiv,VLind-Bench: Measuring Language Priors in Large Vision-Language Models,"Kang-il Lee, Minbeom Kim, Seunghyun Yoon, Minsung Kim, Dongryeol Lee, Hyukhun Koh, Kyomin Jung",0,0,0,pdf,https://arxiv.org/pdf/2406.08702,0,0,0,0,0,0
-arXiv,FIZZ: Factual Inconsistency Detection by Zoom-in Summary and Zoom-out Document,"Joonho Yang, Seunghyun Yoon, Byeongjeong Kim, Hwanhee Lee",0,0,0,pdf,https://arxiv.org/pdf/2404.11184,0,0,0,0,0,0
-arXiv,Towards Enhancing Coherence in Extractive Summarization: Dataset and Experiments with LLMs,"Mihir Parmar, Hanieh Deilamsalehy, Franck Dernoncourt, Seunghyun Yoon, Ryan A. Rossi, Trung Bui",0,0,0,pdf,https://arxiv.org/pdf/2407.04855,0,0,0,0,0,0
 arXiv,"PDFTriage: Question Answering over Long, Structured Documents","Jon Saad-Falcon, Joe Barrow, Alexa Siu, Ani Nenkova, Seunghyun Yoon, Ryan A. Rossi, Franck Dernoncourt",0,0,0,pdf,https://arxiv.org/pdf/2309.08872.pdf,0,0,0,0,0,0
+2024,FIZZ: Factual Inconsistency Detection by Zoom-in Summary and Zoom-out Document,"Joonho Yang, Seunghyun Yoon, Byeongjeong Kim, Hwanhee Lee",EMNLP 2024,https://2024.emnlp.org/,0,pdf,https://arxiv.org/pdf/2404.11184,0,0,0,0,0,0
+2024,Towards Enhancing Coherence in Extractive Summarization: Dataset and Experiments with LLMs,"Mihir Parmar, Hanieh Deilamsalehy, Franck Dernoncourt, Seunghyun Yoon, Ryan A. Rossi, Trung Bui",EMNLP 2024,https://2024.emnlp.org/,0,pdf,https://arxiv.org/pdf/2407.04855,0,0,0,0,0,0
 2024,MVMR: A New Framework for Evaluating Faithfulness of Video Moment Retrieval against Multiple Distractors,"Nakyeong Yang, Minsung Kim, Seunghyun Yoon, Joongbo Shin, Kyomin Jung",CIKM 2024,https://cikm2024.org/,0,pdf,https://arxiv.org/pdf/2309.16701.pdf,0,0,0,0,0,0
 2024,Identifying Speakers in Dialogue Transcripts: A Text-based Approach Using Pretrained Language Models,"Van Minh Nguyen, Franck Dernoncourt, Seunghyun Yoon, Hanieh Deilamsalehy, Hao Tan, Ryan Rossi, Quan Hung Tran, Trung Bui, Thien Nguyen",INTERSPEECH 2024,https://interspeech2024.org/,0,pdf,https://arxiv.org/pdf/2407.12094,0,0,0,0,0,0
-2024,Understanding News Thumbnail Representativeness by Counterfactual Text-Guided Contrastive Language-Image Pretraining,"Yejun Yoon, Seunghyun Yoon, Kunwoo Park",ACL 2024 Findings,https://2024.aclweb.org/,0,pdf,https://arxiv.org/pdf/2402.11159.pdf,0,0,0,0,0,0
-2024,Multi-hop Database Reasoning with Virtual Knowledge Graph,"Juhee Son, Yeon Seonwoo, Alice Oh, James Thorne, Seunghyun Yoon",ACL 2024 Workshop KaLLM,https://2024.aclweb.org/,0,0,0,0,0,0,0,0,0
-2024,KaPQA: Knowledge-Augmented Product Question-Answering,"Swetha Eppalapally, Daksh Dangi, Chaithra Bhat, Ankita Gupta, Ruiyi Zhang, Karishma Bagga, Seunghyun Yoon, Nedim Lipka, Ryan A. Rossi, Franck Dernoncourt",ACL 2024  Workshop KnowledgeNLP,https://2024.aclweb.org/,0,pdf,https://arxiv.org/pdf/2407.16073,0,0,0,0,0,0
+2024,Understanding News Thumbnail Representativeness by Counterfactual Text-Guided Contrastive Language-Image Pretraining,"Yejun Yoon, Seunghyun Yoon, Kunwoo Park",ACL 2024 Findings,https://2024.aclweb.org/,0,pdf,https://aclanthology.org/2024.findings-acl.534.pdf,0,0,0,0,0,0
+2024,Multi-hop Database Reasoning with Virtual Knowledge Graph,"Juhee Son, Yeon Seonwoo, Alice Oh, James Thorne, Seunghyun Yoon",ACL 2024 Workshop KaLLM,https://2024.aclweb.org/,0,pdf,0https://aclanthology.org/2024.kallm-1.1.pdf,0,0,0,0,0,0
+2024,KaPQA: Knowledge-Augmented Product Question-Answering,"Swetha Eppalapally, Daksh Dangi, Chaithra Bhat, Ankita Gupta, Ruiyi Zhang, Karishma Bagga, Seunghyun Yoon, Nedim Lipka, Ryan A. Rossi, Franck Dernoncourt",ACL 2024  Workshop KnowledgeNLP,https://2024.aclweb.org/,0,pdf,https://aclanthology.org/2024.knowledgenlp-1.2.pdf,0,0,0,0,0,0
 2024,Multilingual Sentence-Level Semantic Search using Meta-Distillation Learning,"Meryem M'hamdi, Jonathan May, Franck Dernoncourt, Trung Bui, Seunghyun Yoon",SIGIR 2024,https://sigir-2024.github.io/,0,pdf,https://dl.acm.org/doi/pdf/10.1145/3626772.3657812,0,0,0,0,0,0
 2024,PEEB: Part-based Bird Classifiers with an Explainable and Editable Language Bottleneck,"Thang M. Pham, Peijie Chen, Tin Nguyen, Seunghyun Yoon, Trung Bui, Anh Nguyen",NAACL 2024 Findings,https://2024.naacl.org/,0,pdf,https://aclanthology.org/2024.findings-naacl.131.pdf,0,0,0,0,0,0
 2024,Scaling Up Video Summarization Pretraining with Large Language Models,"Dawit Mureja Argaw, Seunghyun Yoon, Fabian Caba Heilbron, Hanieh Deilamsalehy, Trung Bui, Zhaowen Wang, Franck Dernoncourt, Joon Son Chung ",CVPR 2024,https://cvpr.thecvf.com/,0,pdf,https://openaccess.thecvf.com/content/CVPR2024/papers/Argaw_Scaling_Up_Video_Summarization_Pretraining_with_Large_Language_Models_CVPR_2024_paper.pdf,0,0,0,0,0,0
