@@ -6,6 +6,16 @@
   <font size="2">
   <li>
 	<font color=red>*new*</font>
+	[09/2024]
+	Two paper (Summarization and Factual Inconsistency Detection) is accepted to <a href="https://2024.emnlp.org/">EMNLP 2024</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
+	[08/2024]
+	Our team achieved 2nd place (1st place among open source) in the AVERITEC Shared Task hosted by EMNLP 2024 FEVER workshop <a href="https://fever.ai/task.html">FEVER 2024</a>.
+  </li>
+  <li>
+	<font color=red>*new*</font>
 	[07/2024]
 	One paper (Video Localization) is accepted to <a href="https://cikm2024.org/">CIKM 2024</a>.
   </li>
@@ -15,7 +25,6 @@
 	One paper (Speaker Identification) is accepted to <a href="https://interspeech2024.org/">INTERSPEECH 2024</a>.
   </li>
   <li>
-	<font color=red>*new*</font>
 	[05/2024]
 	One paper (Assessing News Thumbnail Representativeness) is accepted to <a href="https://2024.aclweb.org/">ACL 2024 Findings</a>.
   </li>
